--- a/src/annodize/annodize.ipynb
+++ b/src/annodize/annodize.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,10 +106,8 @@
     "            return response            \n",
     "        \n",
     "        def __call__(AnnotationFormatter, object, ctx = None):\n",
-    "            if isinstance(object, str):\n",
-    "                return AnnotationFormatter.get(expand(\n",
-    "                    treat_path(object), ctx or AnnotationFormatter.parent.user_ns.get(ANNO, {})))\n",
-    "            return object\n",
+    "            return AnnotationFormatter.get(expand(treat_path(object), ctx or AnnotationFormatter.parent.user_ns.get(ANNO, {}))\n",
+    "                                          ) if isinstance(object, str) else object\n",
     "        \n",
     "        def lookup(AnnotationFormatter, object):\n",
     "            obj_id = id(object)\n",
@@ -126,7 +124,6 @@
     "\n",
     "        @staticmethod\n",
     "        def wrapped_request_response(callable):\n",
-    "            inspect.signature(callable)\n",
     "            @functools.wraps(callable)\n",
     "            def call(response):\n",
     "                if len(inspect.signature(callable).parameters) == 1: return callable(response.request)\n",
@@ -136,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
