@\context is a decorator to modify the annotations in the object.

--- a/src/annodize/annodize.ipynb
+++ b/src/annodize/annodize.ipynb
@@ -11,7 +11,7 @@
     "        %reload_ext pidgin\n",
     "    shell = get_ipython()\n",
     "    CTX, ANNO = '@context __annotations__'.split()\n",
-    "    __all__ = 'ctx', "
+    "    __all__ = 'context', "
    ]
   },
   {
@@ -100,8 +100,7 @@
     "            \n",
     "        def post_response(AnnotationFormatter, response, *x, **kwargs):\n",
     "            response.headers['Content-Type'] =  AnnotationFormatter.mimetypes.guess_type(response.url)[0] or response.headers.get('Content-Type', '').partition(';')[0]\n",
-    "            try:\n",
-    "                response.callable= AnnotationFormatter.wrapped_request_response(AnnotationFormatter.lookup(response.headers['Content-Type']))\n",
+    "            try: response.callable= AnnotationFormatter.wrapped_request_response(AnnotationFormatter.lookup(response.headers['Content-Type']))\n",
     "            except KeyError: ...\n",
     "            return response            \n",
     "        \n",
@@ -227,17 +226,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "    class Context(abc.ABCMeta):\n",
-    "        def __new__(cls, name, bases=None, kwargs=None, **context):\n",
-    "            if bases or kwargs:\n",
-    "                annotations = kwargs.pop(ANNO, {})\n",
-    "                return type(name, bases, {**kwargs, '__annotations__': {**annotations, CTX: context}})\n",
-    "            return type(name)\n",
-    "    ctx = {'metaclass': Context}"
+    "    def context(*files, **context):\n",
+    "        \"\"\"A function or class decorator to add a context to the object __annotations__.\n",
+    "        \n",
+    "        This function can be used on modules to modify context.\n",
+    "        \"\"\"\n",
+    "        def wrap(callable):\n",
+    "            nonlocal context\n",
+    "            if files:\n",
+    "                for file in files:\n",
+    "                    with open(file) as file:\n",
+    "                        context.update(__import__('json').load(file))\n",
+    "            annotations = getattr(callable, ANNO, {})\n",
+    "            context = {**annotations.pop(CTX, {}), **context}\n",
+    "            annotations[CTX] = context\n",
+    "            return callable\n",
+    "        return wrap\n",
+    "        "
    ]
   }
  ],
