--- a/tests/usage.ipynb
+++ b/tests/usage.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "    %reload_ext annodize\n",
     "    shell = get_ipython()\n",
-    "    from annodize import ctx\n",
+    "    from annodize import context\n",
     "    with __import__('importnb').Notebook(): import anno_config"
    ]
   },
@@ -94,36 +94,36 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>-2.336879</td>\n",
-       "      <td>0.500702</td>\n",
-       "      <td>1.369588</td>\n",
-       "      <td>-0.303955</td>\n",
+       "      <th>10</th>\n",
+       "      <td>10</td>\n",
+       "      <td>-0.890083</td>\n",
+       "      <td>0.448879</td>\n",
+       "      <td>-1.191549</td>\n",
+       "      <td>-0.148198</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>1.909811</td>\n",
-       "      <td>-0.309804</td>\n",
-       "      <td>-0.948466</td>\n",
-       "      <td>-0.673361</td>\n",
+       "      <th>18</th>\n",
+       "      <td>18</td>\n",
+       "      <td>0.256447</td>\n",
+       "      <td>-0.369712</td>\n",
+       "      <td>-1.391144</td>\n",
+       "      <td>-1.178521</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>-0.720527</td>\n",
-       "      <td>0.814604</td>\n",
-       "      <td>-0.455457</td>\n",
-       "      <td>-0.195950</td>\n",
+       "      <th>8</th>\n",
+       "      <td>8</td>\n",
+       "      <td>-0.269978</td>\n",
+       "      <td>-0.409401</td>\n",
+       "      <td>0.907792</td>\n",
+       "      <td>0.129132</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>22</td>\n",
-       "      <td>-0.627743</td>\n",
-       "      <td>-0.784103</td>\n",
-       "      <td>-0.310250</td>\n",
-       "      <td>-0.200492</td>\n",
+       "      <th>9</th>\n",
+       "      <td>9</td>\n",
+       "      <td>-0.972975</td>\n",
+       "      <td>1.360555</td>\n",
+       "      <td>-0.759803</td>\n",
+       "      <td>-0.472044</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -131,10 +131,10 @@
       ],
       "text/plain": [
        "    Unnamed: 0         A         B         C         D\n",
-       "2            2 -2.336879  0.500702  1.369588 -0.303955\n",
-       "3            3  1.909811 -0.309804 -0.948466 -0.673361\n",
-       "1            1 -0.720527  0.814604 -0.455457 -0.195950\n",
-       "22          22 -0.627743 -0.784103 -0.310250 -0.200492"
+       "10          10 -0.890083  0.448879 -1.191549 -0.148198\n",
+       "18          18  0.256447 -0.369712 -1.391144 -1.178521\n",
+       "8            8 -0.269978 -0.409401  0.907792  0.129132\n",
+       "9            9 -0.972975  1.360555 -0.759803 -0.472044"
       ]
      },
      "metadata": {},
@@ -181,32 +181,32 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>0.256447</td>\n",
+       "      <td>-0.369712</td>\n",
+       "      <td>-1.391144</td>\n",
+       "      <td>-1.178521</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>29</th>\n",
-       "      <td>-0.213360</td>\n",
-       "      <td>0.221889</td>\n",
-       "      <td>-0.311788</td>\n",
-       "      <td>0.664873</td>\n",
+       "      <td>-0.624859</td>\n",
+       "      <td>-0.892456</td>\n",
+       "      <td>-0.730482</td>\n",
+       "      <td>-0.633623</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>-0.335929</td>\n",
-       "      <td>-0.037795</td>\n",
-       "      <td>-0.372911</td>\n",
-       "      <td>0.319190</td>\n",
+       "      <td>0.597080</td>\n",
+       "      <td>0.980344</td>\n",
+       "      <td>-0.694588</td>\n",
+       "      <td>-1.191311</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
-       "      <td>0.558148</td>\n",
-       "      <td>0.310048</td>\n",
-       "      <td>-0.086962</td>\n",
-       "      <td>-0.491575</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>1.038473</td>\n",
-       "      <td>-1.825392</td>\n",
-       "      <td>-1.132699</td>\n",
-       "      <td>-0.453037</td>\n",
+       "      <td>-0.417343</td>\n",
+       "      <td>1.434766</td>\n",
+       "      <td>0.742517</td>\n",
+       "      <td>0.280998</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -214,10 +214,10 @@
       ],
       "text/plain": [
        "           A         B         C         D\n",
-       "29 -0.213360  0.221889 -0.311788  0.664873\n",
-       "0  -0.335929 -0.037795 -0.372911  0.319190\n",
-       "15  0.558148  0.310048 -0.086962 -0.491575\n",
-       "27  1.038473 -1.825392 -1.132699 -0.453037"
+       "18  0.256447 -0.369712 -1.391144 -1.178521\n",
+       "29 -0.624859 -0.892456 -0.730482 -0.633623\n",
+       "0   0.597080  0.980344 -0.694588 -1.191311\n",
+       "15 -0.417343  1.434766  0.742517  0.280998"
       ]
      },
      "metadata": {},
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1787,20 +1787,21 @@
        "__main__.Refs"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "    class Refs(**ctx, wiki=\"https://en.wikipedia.org/wiki/\"):\n",
+    "    @context(wiki=\"https://en.wikipedia.org/wiki/\")\n",
+    "    class Refs:\n",
     "        p: \"wiki:Physics\"\n",
     "    Refs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1818,7 +1819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1827,7 +1828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1836,7 +1837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -3252,36 +3253,36 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>14</td>\n",
-       "      <td>1.112996</td>\n",
-       "      <td>1.578125</td>\n",
-       "      <td>0.478193</td>\n",
-       "      <td>0.628332</td>\n",
+       "      <th>24</th>\n",
+       "      <td>24</td>\n",
+       "      <td>0.027767</td>\n",
+       "      <td>0.416536</td>\n",
+       "      <td>0.006262</td>\n",
+       "      <td>1.773912</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>18</td>\n",
-       "      <td>-1.197481</td>\n",
-       "      <td>-0.450241</td>\n",
-       "      <td>0.057141</td>\n",
-       "      <td>0.099930</td>\n",
+       "      <th>15</th>\n",
+       "      <td>15</td>\n",
+       "      <td>-0.689459</td>\n",
+       "      <td>-0.453717</td>\n",
+       "      <td>0.021482</td>\n",
+       "      <td>0.604419</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>25</td>\n",
-       "      <td>0.909045</td>\n",
-       "      <td>-0.275229</td>\n",
-       "      <td>-0.479694</td>\n",
-       "      <td>-0.758396</td>\n",
+       "      <th>28</th>\n",
+       "      <td>28</td>\n",
+       "      <td>-0.152838</td>\n",
+       "      <td>1.142066</td>\n",
+       "      <td>-1.511305</td>\n",
+       "      <td>1.261381</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>26</td>\n",
-       "      <td>-1.065159</td>\n",
-       "      <td>-0.395904</td>\n",
-       "      <td>0.131203</td>\n",
-       "      <td>0.329752</td>\n",
+       "      <th>23</th>\n",
+       "      <td>23</td>\n",
+       "      <td>0.655597</td>\n",
+       "      <td>0.998329</td>\n",
+       "      <td>2.191592</td>\n",
+       "      <td>-1.226601</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -3289,10 +3290,10 @@
       ],
       "text/plain": [
        "    Unnamed: 0         A         B         C         D\n",
-       "14          14  1.112996  1.578125  0.478193  0.628332\n",
-       "18          18 -1.197481 -0.450241  0.057141  0.099930\n",
-       "25          25  0.909045 -0.275229 -0.479694 -0.758396\n",
-       "26          26 -1.065159 -0.395904  0.131203  0.329752"
+       "24          24  0.027767  0.416536  0.006262  1.773912\n",
+       "15          15 -0.689459 -0.453717  0.021482  0.604419\n",
+       "28          28 -0.152838  1.142066 -1.511305  1.261381\n",
+       "23          23  0.655597  0.998329  2.191592 -1.226601"
       ]
      },
      "metadata": {},
@@ -3339,32 +3340,32 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>0.442392</td>\n",
-       "      <td>0.332272</td>\n",
-       "      <td>-1.201966</td>\n",
-       "      <td>-0.536325</td>\n",
+       "      <th>15</th>\n",
+       "      <td>-0.689459</td>\n",
+       "      <td>-0.453717</td>\n",
+       "      <td>0.021482</td>\n",
+       "      <td>0.604419</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>0.869659</td>\n",
-       "      <td>-1.345126</td>\n",
-       "      <td>1.392960</td>\n",
-       "      <td>-0.164343</td>\n",
+       "      <th>8</th>\n",
+       "      <td>-0.416092</td>\n",
+       "      <td>-0.955541</td>\n",
+       "      <td>-0.338505</td>\n",
+       "      <td>-0.050558</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>26</th>\n",
-       "      <td>-1.065159</td>\n",
-       "      <td>-0.395904</td>\n",
-       "      <td>0.131203</td>\n",
-       "      <td>0.329752</td>\n",
+       "      <td>0.194736</td>\n",
+       "      <td>0.124599</td>\n",
+       "      <td>-1.077070</td>\n",
+       "      <td>-1.403013</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1.488871</td>\n",
-       "      <td>0.512680</td>\n",
-       "      <td>-0.708874</td>\n",
-       "      <td>0.667944</td>\n",
+       "      <th>21</th>\n",
+       "      <td>1.030342</td>\n",
+       "      <td>0.119052</td>\n",
+       "      <td>0.011205</td>\n",
+       "      <td>-1.968036</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -3372,10 +3373,10 @@
       ],
       "text/plain": [
        "           A         B         C         D\n",
-       "9   0.442392  0.332272 -1.201966 -0.536325\n",
-       "20  0.869659 -1.345126  1.392960 -0.164343\n",
-       "26 -1.065159 -0.395904  0.131203  0.329752\n",
-       "3   1.488871  0.512680 -0.708874  0.667944"
+       "15 -0.689459 -0.453717  0.021482  0.604419\n",
+       "8  -0.416092 -0.955541 -0.338505 -0.050558\n",
+       "26  0.194736  0.124599 -1.077070 -1.403013\n",
+       "21  1.030342  0.119052  0.011205 -1.968036"
       ]
      },
      "metadata": {},
