Move the test configs to the formatters module for default settings.

--- a/src/annodize/annodize.ipynb
+++ b/src/annodize/annodize.ipynb
@@ -235,12 +235,13 @@
     "        \n",
     "        This function can be used on modules to modify context.\n",
     "        \"\"\"\n",
-    "        def wrap(callable):\n",
+    "        def wrap(callable=None):\n",
     "            nonlocal context\n",
     "            if files:\n",
     "                for file in files:\n",
     "                    with open(file) as file:\n",
     "                        context.update(__import__('json').load(file))\n",
+    "            if callable is None: return context\n",
     "            annotations = getattr(callable, ANNO, {})\n",
     "            context = {**annotations.pop(CTX, {}), **context}\n",
     "            annotations[CTX] = context\n",
