--- a/tests/usage.ipynb
+++ b/tests/usage.ipynb
@@ -2,19 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "    %reload_ext annodize\n",
     "    shell = get_ipython()\n",
-    "    from annodize import context\n",
-    "    with __import__('importnb').Notebook(): import anno_config"
+    "    from annodize import context"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -94,36 +93,36 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>10</td>\n",
-       "      <td>-0.890083</td>\n",
-       "      <td>0.448879</td>\n",
-       "      <td>-1.191549</td>\n",
-       "      <td>-0.148198</td>\n",
+       "      <th>12</th>\n",
+       "      <td>12</td>\n",
+       "      <td>0.673768</td>\n",
+       "      <td>0.407719</td>\n",
+       "      <td>2.442661</td>\n",
+       "      <td>-1.500587</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>18</td>\n",
-       "      <td>0.256447</td>\n",
-       "      <td>-0.369712</td>\n",
-       "      <td>-1.391144</td>\n",
-       "      <td>-1.178521</td>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0.211813</td>\n",
+       "      <td>-1.207783</td>\n",
+       "      <td>-0.394612</td>\n",
+       "      <td>-0.288132</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>8</td>\n",
-       "      <td>-0.269978</td>\n",
-       "      <td>-0.409401</td>\n",
-       "      <td>0.907792</td>\n",
-       "      <td>0.129132</td>\n",
+       "      <td>0.423466</td>\n",
+       "      <td>0.806755</td>\n",
+       "      <td>1.409920</td>\n",
+       "      <td>-0.111655</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>9</td>\n",
-       "      <td>-0.972975</td>\n",
-       "      <td>1.360555</td>\n",
-       "      <td>-0.759803</td>\n",
-       "      <td>-0.472044</td>\n",
+       "      <th>7</th>\n",
+       "      <td>7</td>\n",
+       "      <td>0.942669</td>\n",
+       "      <td>-0.415848</td>\n",
+       "      <td>0.326009</td>\n",
+       "      <td>0.903589</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -131,10 +130,10 @@
       ],
       "text/plain": [
        "    Unnamed: 0         A         B         C         D\n",
-       "10          10 -0.890083  0.448879 -1.191549 -0.148198\n",
-       "18          18  0.256447 -0.369712 -1.391144 -1.178521\n",
-       "8            8 -0.269978 -0.409401  0.907792  0.129132\n",
-       "9            9 -0.972975  1.360555 -0.759803 -0.472044"
+       "12          12  0.673768  0.407719  2.442661 -1.500587\n",
+       "3            3  0.211813 -1.207783 -0.394612 -0.288132\n",
+       "8            8  0.423466  0.806755  1.409920 -0.111655\n",
+       "7            7  0.942669 -0.415848  0.326009  0.903589"
       ]
      },
      "metadata": {},
@@ -182,31 +181,31 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
-       "      <td>0.256447</td>\n",
-       "      <td>-0.369712</td>\n",
-       "      <td>-1.391144</td>\n",
-       "      <td>-1.178521</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>-0.624859</td>\n",
-       "      <td>-0.892456</td>\n",
-       "      <td>-0.730482</td>\n",
-       "      <td>-0.633623</td>\n",
+       "      <td>0.445991</td>\n",
+       "      <td>-1.097279</td>\n",
+       "      <td>-0.654135</td>\n",
+       "      <td>0.626257</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.597080</td>\n",
-       "      <td>0.980344</td>\n",
-       "      <td>-0.694588</td>\n",
-       "      <td>-1.191311</td>\n",
+       "      <td>-0.539031</td>\n",
+       "      <td>0.981137</td>\n",
+       "      <td>-0.191051</td>\n",
+       "      <td>-1.166904</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>-0.417343</td>\n",
-       "      <td>1.434766</td>\n",
-       "      <td>0.742517</td>\n",
-       "      <td>0.280998</td>\n",
+       "      <th>26</th>\n",
+       "      <td>1.651171</td>\n",
+       "      <td>-1.370871</td>\n",
+       "      <td>-0.232147</td>\n",
+       "      <td>-1.982162</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>0.942669</td>\n",
+       "      <td>-0.415848</td>\n",
+       "      <td>0.326009</td>\n",
+       "      <td>0.903589</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -214,10 +213,10 @@
       ],
       "text/plain": [
        "           A         B         C         D\n",
-       "18  0.256447 -0.369712 -1.391144 -1.178521\n",
-       "29 -0.624859 -0.892456 -0.730482 -0.633623\n",
-       "0   0.597080  0.980344 -0.694588 -1.191311\n",
-       "15 -0.417343  1.434766  0.742517  0.280998"
+       "18  0.445991 -1.097279 -0.654135  0.626257\n",
+       "0  -0.539031  0.981137 -0.191051 -1.166904\n",
+       "26  1.651171 -1.370871 -0.232147 -1.982162\n",
+       "7   0.942669 -0.415848  0.326009  0.903589"
       ]
      },
      "metadata": {},
@@ -253,7 +252,7 @@
        "__main__.Files"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +420,7 @@
        "__main__.FlatFiles"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +530,7 @@
        "<module '__main__'>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1787,7 +1786,7 @@
        "__main__.Refs"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1801,7 +1800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1819,7 +1818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1828,7 +1827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1837,7 +1836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -3253,36 +3252,36 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>24</td>\n",
-       "      <td>0.027767</td>\n",
-       "      <td>0.416536</td>\n",
-       "      <td>0.006262</td>\n",
-       "      <td>1.773912</td>\n",
+       "      <th>21</th>\n",
+       "      <td>21</td>\n",
+       "      <td>-0.892446</td>\n",
+       "      <td>-1.231632</td>\n",
+       "      <td>-0.115078</td>\n",
+       "      <td>-0.197702</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>15</td>\n",
-       "      <td>-0.689459</td>\n",
-       "      <td>-0.453717</td>\n",
-       "      <td>0.021482</td>\n",
-       "      <td>0.604419</td>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>-0.200703</td>\n",
+       "      <td>0.166869</td>\n",
+       "      <td>-0.327347</td>\n",
+       "      <td>0.195439</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>28</td>\n",
-       "      <td>-0.152838</td>\n",
-       "      <td>1.142066</td>\n",
-       "      <td>-1.511305</td>\n",
-       "      <td>1.261381</td>\n",
+       "      <th>18</th>\n",
+       "      <td>18</td>\n",
+       "      <td>1.743728</td>\n",
+       "      <td>1.776906</td>\n",
+       "      <td>0.816943</td>\n",
+       "      <td>-1.398260</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>23</td>\n",
-       "      <td>0.655597</td>\n",
-       "      <td>0.998329</td>\n",
-       "      <td>2.191592</td>\n",
-       "      <td>-1.226601</td>\n",
+       "      <th>17</th>\n",
+       "      <td>17</td>\n",
+       "      <td>-1.126631</td>\n",
+       "      <td>-0.201884</td>\n",
+       "      <td>-1.688955</td>\n",
+       "      <td>0.503508</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -3290,10 +3289,10 @@
       ],
       "text/plain": [
        "    Unnamed: 0         A         B         C         D\n",
-       "24          24  0.027767  0.416536  0.006262  1.773912\n",
-       "15          15 -0.689459 -0.453717  0.021482  0.604419\n",
-       "28          28 -0.152838  1.142066 -1.511305  1.261381\n",
-       "23          23  0.655597  0.998329  2.191592 -1.226601"
+       "21          21 -0.892446 -1.231632 -0.115078 -0.197702\n",
+       "0            0 -0.200703  0.166869 -0.327347  0.195439\n",
+       "18          18  1.743728  1.776906  0.816943 -1.398260\n",
+       "17          17 -1.126631 -0.201884 -1.688955  0.503508"
       ]
      },
      "metadata": {},
@@ -3340,32 +3339,32 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>-0.689459</td>\n",
-       "      <td>-0.453717</td>\n",
-       "      <td>0.021482</td>\n",
-       "      <td>0.604419</td>\n",
+       "      <th>0</th>\n",
+       "      <td>-0.200703</td>\n",
+       "      <td>0.166869</td>\n",
+       "      <td>-0.327347</td>\n",
+       "      <td>0.195439</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>-0.416092</td>\n",
-       "      <td>-0.955541</td>\n",
-       "      <td>-0.338505</td>\n",
-       "      <td>-0.050558</td>\n",
+       "      <th>18</th>\n",
+       "      <td>1.743728</td>\n",
+       "      <td>1.776906</td>\n",
+       "      <td>0.816943</td>\n",
+       "      <td>-1.398260</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>0.194736</td>\n",
-       "      <td>0.124599</td>\n",
-       "      <td>-1.077070</td>\n",
-       "      <td>-1.403013</td>\n",
+       "      <th>9</th>\n",
+       "      <td>0.612711</td>\n",
+       "      <td>-0.114049</td>\n",
+       "      <td>-0.548230</td>\n",
+       "      <td>-0.052374</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>1.030342</td>\n",
-       "      <td>0.119052</td>\n",
-       "      <td>0.011205</td>\n",
-       "      <td>-1.968036</td>\n",
+       "      <th>14</th>\n",
+       "      <td>1.144268</td>\n",
+       "      <td>-0.977996</td>\n",
+       "      <td>-1.372228</td>\n",
+       "      <td>-1.108703</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -3373,10 +3372,10 @@
       ],
       "text/plain": [
        "           A         B         C         D\n",
-       "15 -0.689459 -0.453717  0.021482  0.604419\n",
-       "8  -0.416092 -0.955541 -0.338505 -0.050558\n",
-       "26  0.194736  0.124599 -1.077070 -1.403013\n",
-       "21  1.030342  0.119052  0.011205 -1.968036"
+       "0  -0.200703  0.166869 -0.327347  0.195439\n",
+       "18  1.743728  1.776906  0.816943 -1.398260\n",
+       "9   0.612711 -0.114049 -0.548230 -0.052374\n",
+       "14  1.144268 -0.977996 -1.372228 -1.108703"
       ]
      },
      "metadata": {},
