--- a/src/annodize/formatters/base.ipynb
+++ b/src/annodize/formatters/base.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "    import io, IPython, functools\n",
+    "    import io, IPython, functools, importlib_resources\n",
     "    shell = __import__('IPython').get_ipython()"
    ]
   },
@@ -24,11 +24,7 @@
     "        scheme, sep, path = resp.url.partition('://')\n",
     "        connection = __import__('ibis').sqlite.connect(path)\n",
     "        return F\"{response.url} has tables named: {', '.join(connection.list_tables())}\"\n",
-    "    shell.annotation_formatter.for_type_by_ext(\n",
-    "        'py', lambda req, resp: IPython.display.Code(\n",
-    "            resp.content, language='python'\n",
-    "        )\n",
-    "    )\n",
+    "    \n",
     "    def read_pandas(attr, request, response): \n",
     "        return getattr(__import__('pandas'), F\"read_{attr}\")(io.BytesIO(response.content)).sample(4)\n",
     "\n",
@@ -38,13 +34,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "    if shell and hasattr(shell, 'annotation_formatter'):\n",
+    "    def load_ipython_extension(shell):\n",
     "        annotation = shell.annotation_formatter\n",
-    "        annotation.mimetypes.read('mime.types')\n",
+    "        with importlib_resources.path('annodize.formatters', 'base.types') as path:\n",
+    "            annotation.mimetypes.read(path)\n",
+    "            \n",
+    "        annotation.for_type_by_ext(\n",
+    "            'py', lambda req, resp: IPython.display.Code(\n",
+    "                resp.content, language='python'\n",
+    "            )\n",
+    "        )\n",
     "        annotation.for_type_by_name(None, None, iframe)\n",
     "        annotation.for_type_by_ext('com', iframe)\n",
     "        annotation.for_type_by_ext(\n",
@@ -71,11 +74,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "    "
+    "    def unload_ipython_extension(shell): ...\n",
+    "        "
    ]
   }
  ],
